--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <h1>Home page</h1>
-  <p>Welcome to my awesome website 😎</p>
+  <p>Welcome to my cool website 😎</p>
 </body>
 </html>
