reduce width of dog

--- a/dog.html
+++ b/dog.html
@@ -9,6 +9,6 @@
 <body>
   <h1>Dog</h1>
   <p>Dog</p>
-  <img src="assets/images/cooldog.jpg" alt="A cool dog">
+  <img src="assets/images/cooldog.jpg" alt="A cool dog" width="150px">
 </body>
 </html>
