--- a/secret_pages/fancy.html
+++ b/secret_pages/fancy.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/assets/css/fancy.css">
 </head>
 <body>
-  <h1>Welcome to the fancy page</h1>
+  <h1>Welcome to the fancy page.</h1>
   <p>Very <span>fancy</span></p>
 </body>
 </html>
